// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comments-1.js - babylon-verify 1`] = `
// hi l<|>ol
function ehllooo () {
  const hi = "hi"
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// hi l<|>ol
function ehllooo() {
  const hi = "hi";
}

`;

exports[`comments-2.js - babylon-verify 1`] = `
<|>
// howdy
// hi lol
const y = 5
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<|>// howdy
// hi lol
const y = 5;

`;

exports[`comments-3.js - babylon-verify 1`] = `
/<|>/ howdy
// hi lol
const y = 5
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/<|>/ howdy
// hi lol
const y = 5;

`;

exports[`comments-4.js - babylon-verify 1`] = `
// howdy
// hi lol
const y = 5
//  traling! <|>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// howdy
// hi lol
const y = 5;
//  traling!<|>

`;

exports[`cursor-0.js - babylon-verify 1`] = `
(function() {return        <|> 15})()
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
(function() {
  return <|>15;
})();

`;

exports[`cursor-1.js - babylon-verify 1`] = `
(function(){return        <|>15})()
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
(function() {
  return <|>15;
})();

`;

exports[`cursor-2.js - babylon-verify 1`] = `

foo  <|>  (bar);
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
foo<|>(bar);

`;

exports[`cursor-3.js - babylon-verify 1`] = `


  <|>

  const y = 5
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<|>const y = 5;

`;

exports[`cursor-4.js - babylon-verify 1`] = `


  const y = 5

  <|>

  const z = 9
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
const y = 5;

<|>const z = 9;

`;

exports[`cursor-5.js - babylon-verify 1`] = `
const    /* h<|>i */    y = 5
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
const /* h<|>i */ y = 5;

`;

exports[`cursor-6.js - babylon-verify 1`] = `
const      y    /* h<|>i */   = 5
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
const y /* h<|>i */ = 5;

`;

exports[`cursor-7.js - babylon-verify 1`] = `
const y = 5
<|>

const z = 9
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
const y = 5;
<|>
const z = 9;

`;

exports[`cursor-8.js - babylon-verify 1`] = `
  func<|>tion banana(){}~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
func<|>tion banana() {}

`;

exports[`cursor-9.js - babylon-verify 1`] = `
     thisWillBeFormatted  <|>  (2  ,3,   )~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
thisWillBeFormatted<|>(2, 3);

`;

exports[`cursor-10.js - babylon-verify 1`] = `
const y = 5




<|>
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
const y = 5;
<|>
`;

exports[`file-start-with-comment-1.js - babylon-verify 1`] = `
// hi<|> lol
haha()
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// hi<|> lol
haha();

`;

exports[`file-start-with-comment-2.js - babylon-verify 1`] = `
// hi lol
haha()<|>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// hi lol
haha()<|>;

`;

exports[`range-0.js - babylon-verify 1`] = `
thisWontBeFormatted  ( 1  ,3)

    thisWillBeFormatted  <|>  (2  ,3,   )

    thisWontBeFormatted  (2, 90  ,)
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
thisWontBeFormatted  ( 1  ,3)

    thisWillBeFormatted<|>(2, 3);

    thisWontBeFormatted  (2, 90  ,)
    
`;

exports[`range-1.js - babylon-verify 1`] = `
thisWontBeFormatted  ( 1  ,3)

    thisWillBeFormatted    (2  ,3<|>,   )

    thisWontBeFormatted  (2, 90  ,)
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
thisWontBeFormatted  ( 1  ,3)

    thisWillBeFormatted(2, 3<|>);

    thisWontBeFormatted  (2, 90  ,)
    
`;

exports[`range-2.js - babylon-verify 1`] = `
thisWontBeFormatted  ( 1  ,3)

    thisWillBeFormatted    (2  ,3,  <|> )

    thisWontBeFormatted  (2, 90  ,)
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
thisWontBeFormatted  ( 1  ,3)

    thisWillBeFormatted(2, 3<|>);

    thisWontBeFormatted  (2, 90  ,)
    
`;

exports[`range-3.js - babylon-verify 1`] = `
thisWontBeFormatted <|> ( 1  ,3)

    thisWillBeFormatted    (2  ,3,   )

    thisWontBeFormatted  (2, 90  ,)
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
thisWontBeFormatted <|> ( 1  ,3)

    thisWillBeFormatted(2, 3);

    thisWontBeFormatted  (2, 90  ,)
    
`;

exports[`range-4.js - babylon-verify 1`] = `
thisWontBeFormatted  ( 1  ,3)

    thisWillBeFormatted    (2  ,3,   )

    thisWontBeFormatted  (2, 9<|>0  ,)
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
thisWontBeFormatted  ( 1  ,3)

    thisWillBeFormatted(2, 3);

    thisWontBeFormatted  (2, 9<|>0  ,)
    
`;
